--- a/test.html
+++ b/test.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>krumb unit test</title>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>krumb QUnit test</title>
-	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
-	<script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
-	<script type="application/javascript" src="./krumb.deploy.js"></script>
-</head>
+		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
 
-<body>
-	<div id="qunit"></div>
-	<div id="qunit-fixture"></div>
-	<script>
-		QUnit.test( "equal test", function( assert ) {
+		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
 
-			assert.deepEqual( krumb( { "name": "simple" } ), { "name": "simple" }, "should be equal" );
+		<script type="application/javascript" src="./krumb.deploy.js"></script>
+	</head>
 
-			assert.deepEqual( krumb( { } ), { }, "should be equal" );
+	<body>
+		<div id="qunit"></div>
 
-		} );
+		<div id="qunit-fixture"></div>
+
+		<script type="application/javascript">
+			QUnit.test( "krumb unit test", function( assert ) {
+
+				assert.deepEqual( krumb( { "name": "simple" } ), { "name": "simple" }, "should be equal to { 'name': 'simple' }" );
+
+				assert.deepEqual( krumb( { } ), { }, "should be equal to { }" );
+
+			} );
 		</script>
-</body>
-
+	</body>
 </html>
