--- a/test.html
+++ b/test.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>krumb unit test</title>
+		<meta charset="utf-8">
 
-		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+		<title>test:krumb</title>
 
-		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
-
-		<script type="application/javascript" src="./krumb.deploy.js"></script>
+		<link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css"/>
 	</head>
 
 	<body>
-		<div id="qunit"></div>
+		<div id="mocha"></div>
 
-		<div id="qunit-fixture"></div>
+		<script type="application/javascript" src="https://unpkg.com/mocha/mocha.js"></script>
 
 		<script type="application/javascript">
-			QUnit.test( "krumb unit test", function( assert ) {
+			mocha.setup( "bdd" );
+		</script>
 
-				assert.deepEqual( krumb( { "name": "simple" } ), { "name": "simple" }, "should be equal to { 'name': 'simple' }" );
+		<script type="application/javascript" src="./test.deploy.js"></script>
 
-				assert.deepEqual( krumb( { } ), { }, "should be equal to { }" );
-
-			} );
+		<script type="application/javascript">
+			mocha.run( );
 		</script>
 	</body>
 </html>
